# web_test_automation_mcp

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
src/: main.py
src/agent/: loop.py  memory.py  planner.py  policy.py  retry.py
src/browser/: actions.py  devtools_adapter.py  dom_utils.py  observe.py
src/config/: __init__.py  providers.py  schemas.py  settings.py
src/llm/: __init__.py  base.py  groq_client.py  providers.py  router.py
src/mcp/: __init__.py  client.py  errors.py  tools.py
src/mcp_client/: jsonrpc.py  session.py  transport.py
src/ocr/: engine.py  preprocess.py
src/pipeline/: __init__.py  context.py  runner.py
src/step1_extract/: __init__.py  extractor.py  interactive_filter.py  models.py  selector_refiner.py  selector_validator.py
src/step2_generate/: __init__.py  generator.py  models.py  test_case_refiner.py  validator.py
src/step3_execute/: __init__.py  action_dispatcher.py  executor.py  models.py  reasoning_loop.py  state_observer.py
src/step4_log/: __init__.py  models.py  summarizer.py  writer.py
tests/: test_retry.py
tests/integration/: test_linear_pipeline_smoke.py
tests/unit/: test_main_prompt_parser.py  test_state_observer.py  test_step1_extractor.py  test_step1_selector_refiner.py  test_step1_selector_validation.py  test_step1_selector_validator.py  test_step2_generator.py  test_step2_selector_whitelist.py  test_step2_test_case_refiner.py  test_step3_action_loop.py  test_step4_trace_writer.py
